[ios] Fixes small Collections constraint issues.

- Changes the disclore headerFooter subtitle label CompressionResistancePriority to prevent it
being compressed when refreshing the Cell.
- Deletes some un-needed constraints that weren't playing nicely with the TableView dynamic sizing,
causing broken constraints.

Bug: 851929
Cq-Include-Trybots: luci.chromium.try:ios-simulator-full-configs;master.tryserver.chromium.mac:ios-simulator-cronet
Change-Id: Ifd641c1d7c227592d4767d9af1874dfcb3e556ca
Reviewed-on: https://chromium-review.googlesource.com/1123335
Reviewed-by: edchin <edchin@chromium.org>
Commit-Queue: Sergio Collazos <sczs@chromium.org>
Cr-Commit-Position: refs/heads/master@{#572235}
Former-commit-id: 2867a7160ab2a2b19ba82928b04908edcaacd0d5